--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trilha Inicial Front-End Jr - devsantos</title>
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -24,9 +23,10 @@
     <main
         class="d-flex align-items-center justify-content-center flex-column container-xxl mw-100 border border-danger">
 
-        <!-- <img src="img/vinicius.png" alt="perfil" id="perfil" class="rounded-circle border border-danger mt-3 mb-4"> -->
+        <img src="img/vinicius.png" alt="perfil" id="perfil" class="rounded-circle border border-danger mt-3 mb-4">
 
         <h1>Oi, eu sou o Vinicius Santos</h1>
+
     </main>
 
     <section class="border border-danger w-100 p-3 mt-3">
@@ -38,21 +38,23 @@
         </div>
     </section>
 
-    <section class="grid gap-0 row-gap-3 w-75">
+    <section class="grid row-gap-3 w-75">
 
-        <div class="d-flex mt-4 divisao ">
-            <div class="d-flex flex-column justify-content-top align-items-center border border-danger gostos ">gostos
+        <div class="row mt-4 w-auto divisao-quadrados">
+            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos ">config
             </div>
-            <div class="d-flex flex-column justify-content-top align-items-center border border-danger gostos">gostos
+            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
             </div>
-            <div class="d-flex flex-column justify-content-top align-items-center border border-danger gostos">gostos
+            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
             </div>
+        </div>
 
-            <div class="d-flex flex-column justify-content-top align-items-center border border-danger gostos">gostos
+        <div class="row mt-4 w-auto divisao-quadrados">
+            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
             </div>
-            <div class="d-flex flex-column justify-content-top align-items-center border border-danger gostos">gostos
+            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
             </div>
-            <div class="d-flex flex-column justify-content-top align-items-center border border-danger gostos">gostos
+            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
             </div>
         </div>
     </section>
