ajustando estrutura menu e footer

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 <body class="d-flex flex-column align-items-center justify-content-center py-4 bg-">
 
-    <nav class="container-xl navbar border border-danger ">
+    <nav class="container-xl d-flex justify-content-around navbar fixed-top border border-danger ">
         <a href="#">in</a>
         <a href="#">git</a>
         <a href="#">ig</a>
     </nav>
 
-    <main
-        class="d-flex align-items-center justify-content-center flex-column container-xxl mw-100 border border-danger">
+    <main class="d-flex align-items-center justify-content-center flex-column container-xxl mw-100 mt-5 border border-danger">
 
-        <img src="img/vinicius.png" alt="perfil" id="perfil" class="rounded-circle border border-danger mt-3 mb-4">
+        <!-- <img src="img/vinicius.png" alt="perfil" id="perfil" class="rounded-circle border border-danger mt-3 mb-4"> -->
+        <!-- <img src="img/devsantos.png" alt="perfil" id="perfil" class="rounded-circle border border-danger mt-3 mb-4"> -->
 
         <h1>Oi, eu sou o Vinicius Santos</h1>
 
@@ -58,7 +58,7 @@
             </div>
         </div>
     </section>
-    <footer class="border border-danger">
+    <footer class="footer border border-danger">
         <p>Desenvolvido por <a href="#">devsantos</a></p>
     </footer>
 
