ajustando estrutura e organização do código

--- a/index.html
+++ b/index.html
@@ -14,52 +14,56 @@
 
 <body class="d-flex flex-column align-items-center justify-content-center py-4 bg-">
 
-    <nav class="container-xl d-flex justify-content-around navbar fixed-top border border-danger ">
+    <nav class="container-xl d-flex justify-content-around navbar fixed-top border" id="menu">
         <a href="#">in</a>
         <a href="#">git</a>
         <a href="#">ig</a>
     </nav>
 
-    <main class="d-flex align-items-center justify-content-center flex-column container-xxl mw-100 mt-5 border border-danger">
+    <main class="d-flex align-items-center justify-content-center flex-column container-xxl mw-100 mt-5 border"
+        id="apresentacao">
 
         <!-- <img src="img/vinicius.png" alt="perfil" id="perfil" class="rounded-circle border border-danger mt-3 mb-4"> -->
         <!-- <img src="img/devsantos.png" alt="perfil" id="perfil" class="rounded-circle border border-danger mt-3 mb-4"> -->
 
-        <h1>Oi, eu sou o Vinicius Santos</h1>
+        <h1 class="text-center">Oi, eu sou o Vinicius Santos</h1>
 
     </main>
 
     <section class="border border-danger w-100 p-3 mt-3">
-        <div>
+
+        <div class="text-center">
+
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio quasi ea, possimus mollitia est
                 quo consequatur dolore modi qui, beatae labore, repellat ratione eligendi ab? Reiciendis provident
                 dolore incidunt.
             </p>
+
         </div>
+
     </section>
 
-    <section class="grid row-gap-3 w-75">
+    <section class="w-75">
 
-        <div class="row mt-4 w-auto divisao-quadrados">
-            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos ">config
-            </div>
-            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
-            </div>
-            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
-            </div>
+        <div class="row mt-4 w-auto" id="divisao-quadrados">
+            <div class="col border" id="quadrado-gostos">config </div>
+            <div class="col border" id="quadrado-gostos">config </div>
+            <div class="col border" id="quadrado-gostos">config </div>
         </div>
 
-        <div class="row mt-4 w-auto divisao-quadrados">
-            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
-            </div>
-            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
-            </div>
-            <div class="col d-flex flex-column justify-content-top align-items-center border quadrado-gostos">config
-            </div>
+        <div class="row mt-4 w-auto" id="divisao-quadrados">
+
+            <div class="col border" id="quadrado-gostos">config </div>
+            <div class="col border" id="quadrado-gostos">config </div>
+            <div class="col border" id="quadrado-gostos">config </div>
+
         </div>
     </section>
-    <footer class="footer border border-danger">
+    <footer class="footer border" id="rodape">
+
         <p>Desenvolvido por <a href="#">devsantos</a></p>
+        <p><a href="#">Voltar ao Início</a></p>
+
     </footer>
 
 </body>
