--- a/index.html
+++ b/index.html
@@ -6,31 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trilha Inicial Front-End Jr - devsantos</title>
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/x-icon" href="img/codigo-certo.png">
+    <link rel="stylesheet" href="src/css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
-<body class="d-flex flex-column align-items-center justify-content-center py-4 bg-">
+<body class="d-flex flex-column align-items-center justify-content-center py-3">
 
-    <nav class="container-xl d-flex justify-content-around navbar fixed-top border" id="menu">
-        <a href="#">in</a>
-        <a href="#">git</a>
-        <a href="#">ig</a>
+    <nav class="container-xl d-flex justify-content-around navbar fixed-top border rounded-bottom-1" id="menu">
+
+        <a href="https://www.linkedin.com/in/vsantus" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/vsantus" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/vsantos____/" target="_blank"><i class="fab fa-instagram"></i></a>
+
     </nav>
 
-    <main class="d-flex align-items-center justify-content-center flex-column container-xxl mw-100 mt-5 border"
+    <main
+        class="container-xxl d-flex align-items-center justify-content-center flex-column mw-100 my-5 border border-2 rounded-bottom-1 rounded-top-1"
         id="apresentacao">
 
-        <!-- <img src="img/vinicius.png" alt="perfil" id="perfil" class="rounded-circle border border-danger mt-3 mb-4"> -->
-        <!-- <img src="img/devsantos.png" alt="perfil" id="perfil" class="rounded-circle border border-danger mt-3 mb-4"> -->
+        <img src="img/vinicius.png" alt="perfil" id="perfil" class="rounded-circle border border-4 mt-3 mb-4">
+        <!-- <img src="img/devsantos.png" alt="perfil" id="perfil" class="rounded-circle border border-4 mt-3 mb-4"> -->
 
         <h1 class="text-center">Oi, eu sou o Vinicius Santos</h1>
 
     </main>
 
-    <section class="border border-danger w-100 p-3 mt-3">
+    <section class="border border-danger w-100 p-3 my-3 rounded-bottom-1 rounded-top-1" id="descricao">
 
         <div class="text-center">
 
@@ -43,26 +50,42 @@
 
     </section>
 
-    <section class="w-75">
+    <section class="w-100 my-5 p-3">
 
-        <div class="row mt-4 w-auto" id="divisao-quadrados">
-            <div class="col border" id="quadrado-gostos">config </div>
-            <div class="col border" id="quadrado-gostos">config </div>
-            <div class="col border" id="quadrado-gostos">config </div>
+        <div class="row w-auto p-2" id="divisao-quadrados">
+
+            <div class="d-flex flex-column align-items-center col border border-3" id="quadrado-gostos"><img src="img/img-quadrados/tecnologia.png" alt="">
+                <h2></h2>
+                <p></p>
+            </div>
+
+            <div class="d-flex flex-column align-items-center col border border-3" id="quadrado-gostos"><img src="img/img-quadrados/musica.png" alt="">
+                <h2></h2>
+                <p></p>
+            </div>
         </div>
 
-        <div class="row mt-4 w-auto" id="divisao-quadrados">
+        <div class="row w-auto p-2" id="divisao-quadrados">
 
-            <div class="col border" id="quadrado-gostos">config </div>
-            <div class="col border" id="quadrado-gostos">config </div>
-            <div class="col border" id="quadrado-gostos">config </div>
+            <div class="d-flex flex-column align-items-center col border border-3" id="quadrado-gostos"><img src="img/img-quadrados/chefe.png" alt="">
+                <h2></h2>
+                <p></p>
+            </div>
 
+            <div class="d-flex flex-column align-items-center col border border-3" id="quadrado-gostos"><img src="img/img-quadrados/anime.png" alt="">
+                <h2></h2>
+                <p></p>
+            </div>
         </div>
     </section>
-    <footer class="footer border" id="rodape">
 
-        <p>Desenvolvido por <a href="#">devsantos</a></p>
-        <p><a href="#">Voltar ao Início</a></p>
+    <footer class="container-fluid footer text-center" id="rodape">
+
+        <div>
+            <p>Desenvolvido por <a href="https://wa.me/11934916872" target="_blank"> <strong> devsantos </strong></a>
+            </p>
+            <p><a href="#perfil"> <strong>Voltar ao Início </strong> </a></p>
+        </div>
 
     </footer>
 
