--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trilha Inicial Front-End Jr - devsantos</title>
 
-    <link rel="icon" type="image/x-icon" href="img/codigo-certo.png">
+    <link rel="icon" type="image/x-icon" href="img/icon.webp">
     <link rel="stylesheet" href="src/css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,32 +18,39 @@
 
 <body class="d-flex flex-column align-items-center justify-content-center py-3">
 
-    <nav class="container-xl d-flex justify-content-around navbar fixed-top border rounded-bottom-1" id="menu">
+    <nav class="container-xl d-flex justify-content-around navbar fixed-top border border-3 border-top-0  rounded-bottom-1"
+        id="menu">
 
         <a href="https://www.linkedin.com/in/vsantus" target="_blank"><i class="fab fa-linkedin"></i></a>
+
         <a href="https://github.com/vsantus" target="_blank"><i class="fab fa-github"></i></a>
+
         <a href="https://www.instagram.com/vsantos____/" target="_blank"><i class="fab fa-instagram"></i></a>
 
     </nav>
 
     <main
-        class="container-xxl d-flex align-items-center justify-content-center flex-column mw-100 my-5 border border-2 rounded-bottom-1 rounded-top-1"
+        class="container-xxl d-flex align-items-center justify-content-center flex-column mw-100 my-5 border border-4 rounded-bottom-1 rounded-top-1"
         id="apresentacao">
 
-        <img src="img/vinicius.png" alt="perfil" id="perfil" class="rounded-circle border border-4 mt-3 mb-4">
+        <img src="img/vinicius.png" alt="perfil" class="rounded-circle border border-4 mt-3 mb-4" id="perfil">
         <!-- <img src="img/devsantos.png" alt="perfil" id="perfil" class="rounded-circle border border-4 mt-3 mb-4"> -->
 
         <h1 class="text-center">Oi, eu sou o Vinicius Santos</h1>
 
     </main>
 
-    <section class="border border-danger w-100 p-3 my-3 rounded-bottom-1 rounded-top-1" id="descricao">
+    <section class="w-100 p-3 my-3 rounded-bottom-1 rounded-top-1 border border-4" id="descricao">
 
         <div class="text-center">
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio quasi ea, possimus mollitia est
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio quasi ea, possimus mollitia est
                 quo consequatur dolore modi qui, beatae labore, repellat ratione eligendi ab? Reiciendis provident
                 dolore incidunt.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit pariatur, eius neque quidem nobis dicta
+                explicabo esse consectetur cupiditate nulla tempore possimus sint, praesentium nisi natus deserunt
+                laudantium quis ad.
             </p>
 
         </div>
@@ -54,27 +61,47 @@
 
         <div class="row w-auto p-2" id="divisao-quadrados">
 
-            <div class="d-flex flex-column align-items-center col border border-3" id="quadrado-gostos"><img src="img/img-quadrados/tecnologia.png" alt="">
-                <h2></h2>
-                <p></p>
+            <div class="d-flex flex-column align-items-center col border border-3 m-3" id="quadrado-gostos"><img
+                    src="img/img-quadrados/tecnologia.png" alt="tecnologia">
+                <h2 class="fs-4">Tech</h2>
+                <p class="text-break px-2 text-center overflow-auto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Omnis quasi iste ipsum
+                    dignissimos iusto architecto perferendis mollitia, aut adipisci nostrum alias odit minus quas dolor
+                    nesciunt doloremque cupiditate voluptatum magni.
+                </p>
             </div>
 
-            <div class="d-flex flex-column align-items-center col border border-3" id="quadrado-gostos"><img src="img/img-quadrados/musica.png" alt="">
-                <h2></h2>
-                <p></p>
+            <div class="d-flex flex-column align-items-center col border border-3 m-3" id="quadrado-gostos"><img
+                    src="img/img-quadrados/musica.png" alt="musicas">
+                <h2 class="fs-4">Musicas</h2>
+                <p class="text-break px-2 text-center overflow-auto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Omnis quasi iste ipsum
+                    dignissimos iusto architecto perferendis mollitia, aut adipisci nostrum alias odit minus quas dolor
+                    nesciunt doloremque cupiditate voluptatum magni.
+                </p>
             </div>
         </div>
 
         <div class="row w-auto p-2" id="divisao-quadrados">
 
-            <div class="d-flex flex-column align-items-center col border border-3" id="quadrado-gostos"><img src="img/img-quadrados/chefe.png" alt="">
-                <h2></h2>
-                <p></p>
+            <div class="d-flex flex-column align-items-center col border border-3 m-3" id="quadrado-gostos"><img
+                    src="img/img-quadrados/chefe.png" alt="cozinheiro">
+                <h2 class="fs-4">Cozinha</h2>
+                <p class="text-break px-2 text-center overflow-auto">Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Omnis quasi iste ipsum
+                    dignissimos iusto architecto perferendis mollitia, aut adipisci nostrum alias odit minus quas dolor
+                    nesciunt doloremque cupiditate voluptatum magni.</p>
             </div>
 
-            <div class="d-flex flex-column align-items-center col border border-3" id="quadrado-gostos"><img src="img/img-quadrados/anime.png" alt="">
-                <h2></h2>
-                <p></p>
+            <div class="d-flex flex-column align-items-center col border border-3 m-3" id="quadrado-gostos"><img
+                    src="img/img-quadrados/anime.png" alt="animes">
+                <h2 class="fs-4">Animes</h2>
+                <p class="text-break px-2 text-center overflow-auto">Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Omnis quasi iste ipsum
+                    dignissimos iusto architecto perferendis mollitia, aut adipisci nostrum alias odit minus quas dolor
+                    nesciunt doloremque cupiditate voluptatum magni.</p>
             </div>
         </div>
     </section>
@@ -82,9 +109,9 @@
     <footer class="container-fluid footer text-center" id="rodape">
 
         <div>
-            <p>Desenvolvido por <a href="https://wa.me/11934916872" target="_blank"> <strong> devsantos </strong></a>
+            <p>Desenvolvido por <a href="https://wa.me/11934916872" target="_blank"> <strong> devsantos </strong></a> <br> Para <a href="https://www.codigocertocoders.com.br/" target="_blank"><strong>Codigo Certo Coders</strong></a>
             </p>
-            <p><a href="#perfil"> <strong>Voltar ao Início </strong> </a></p>
+            <p><a href="#"> <strong>Voltar ao Início </strong> </a></p>
         </div>
 
     </footer>
