redimensionando imagem e criando efeito flip no perfil

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div class="d-flex align-items-center justify-content-center flex-column" id="card">
 
     <div class="face" id="front">
-                <!-- <img src="img/vinicius.png" alt="perfil" class="rounded-circle border border-4 mt-3 mb-4" id="perfil"> -->
+                <img src="img/vinicius.png" alt="perfil" class="rounded-circle border border-4 mt-3 mb-4" id="perfil1">
             </div>
 
             <div class="face" id="back">
-                <!-- <img src="img/devsantos.png" alt="perfil" id="perfil" class="rounded-circle border border-4 mt-3 mb-4"> -->
+                <img src="img/devsantos.png" alt="perfil" class="rounded-circle border border-4 mt-3 mb-4" id="perfil2">
             </div> 
             
         </div>
