finalizando bio, projeto FINALIZADO

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div class="d-flex align-items-center justify-content-center flex-column" id="card">
 
             <div class="face" id="front">
-                <img src="img/vinicius.png" alt="perfil" class="rounded-circle border border-4 mt-3 mb-4" id="perfil1">
+                <img src="img/vinicius.png" alt="perfil" title="Clique na Imagem" class="rounded-circle border border-4 mt-3 mb-4" id="perfil1">
             </div>
 
             <div class="face" id="back">
-                <img src="img/devsantos.png" alt="perfil" class="rounded-circle border border-4 mt-3 mb-4" id="perfil2">
+                <img src="img/devsantos.png" alt="perfil" title="devsantos IA" class="rounded-circle border border-4 mt-3 mb-4" id="perfil2">
             </div>
 
         </div>
@@ -64,12 +64,14 @@
         <div class="text-center">
 
             <p id="biografia">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio quasi ea, possimus mollitia est
-                quo consequatur dolore modi qui, beatae labore, repellat ratione eligendi ab? Reiciendis provident
-                dolore incidunt.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit pariatur, eius neque quidem nobis dicta
-                explicabo esse consectetur cupiditate nulla tempore possimus sint, praesentium nisi natus deserunt
-                laudantium quis ad.
+                Seja bem-vindo, fique com a minha breve apresentação.
+                Atualmente eu estou estudando Node.Js para me tornar um profissional Fullstack. Minha maior motivação é
+                um futuro onde eu posso trabalhar com o que eu realmente goste, por exemplo, em projetos para empresas,
+                fazendo freelas de sistemas e até mesmo manutenção de hardwares, desde que seja relacionada a área de
+                TI. Tenho interesse em entrar para a comunidade a fim de fazer networking e conhecer mais pessoas que
+                tenham as mesmas ambições que eu, assim posso criar laços e até mesmo oportunidades para minha carreira,
+                dito isso tenho 20 anos e sou apaixonado por tecnologia, amo buscar conhecimento sobre essa área para
+                sempre ter motivo para aprender mais e mais. Em seguida um pouco dos meus gostos pessoais:
             </p>
 
         </div>
@@ -138,7 +140,7 @@
                     Então tentei uma sobremesa e fiz um pavê de paçoca, que ficou maravilhoso e nada enjoativo.
                     No dia do almoço, estava ansioso e nervoso com o doce, mas foi um sucesso! O pavê
                     desapareceu em menos de 20 minutos. Desde então, aprendi a fazer outras sobremesas, como Palha
-                    Italiana de Travessa, Mousse de Limão e Mousse de Ninho com cobertura de chocolate. Adoro fazer
+                    Italiana de Travessa, Mousse de Limão e Mousse de Ninho com cobertura de chocolate. Adoro
                     isso!
                 </p>
             </div>
